Use my own version of the openid connect lib with my change in it (NB: i'm not sure why I need to user version "dev-master" rather than "^0.2.0" to pick up my latest changes)

--- a/parcel4me/composer.json
+++ b/parcel4me/composer.json
@@ -1,5 +1,5 @@
 {
     "require": {
-        "jumbojett/openid-connect-php": "0.1.*"
+        "krisrandall/openid-connect-with-client-credentials-php": "dev-master"
     }
 }
