--- a/parcel4me/composer.json
+++ b/parcel4me/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "krisrandall/openid-connect-with-client-credentials-php": "dev-master"
+        "krisrandall/openid-connect-with-client-credentials-php": "dev-master",
+        "firebase/php-jwt": "^4.0"
     }
 }
