--- a/parcel4me/composer.json
+++ b/parcel4me/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "krisrandall/openid-connect-with-client-credentials-php": "dev-master",
-        "firebase/php-jwt": "^4.0"
+        "firebase/php-jwt": "^4.0",
+        "smarty/smarty": "^3.1"
     }
 }
