--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,2 @@
-composer.phar
 
-/templates_c/
-
-/basic-demo/vendor/
-/parcel4me/vendor/
-
-/basic-demo/lib/
-
-
-# Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
-# You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
-# composer.lock
-
+/vendor/
