Add an autoload entry to composer.json  fingers crossed I've got this correct, will find out shortly ..

--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,10 @@
             "name": "krisrandall",
             "email": "kris.randall@gmail.com"
         }
-    ]
+    ],
+    "autoload": {
+        "psr-0": {
+            "P4M": "src/parcel4me"
+        }
+    }
 }
